0.0.5
	- bugfix: extend_canvas was not setting the left margin correctly
0.0.6
	- sequence feature moved to tnt.genome
0.0.7
	- Added pin feature (+ example)
0.0.8
        - Pin feature domain now adjusts the size of the pin better
	- Added pin example
0.0.9
	- foreground_color converts the color to rgb format automatically
0.0.10
	- revert foreground_color conversion to rgb (using the string instead)
0.0.11
	- added label to tracks
0.0.12
	- Bugfix: track height is now passed to layout
0.0.13
	- Generalized events (on) with "click", "dblclick", "mouseover" and "mouseout"
	- Added optional labels to pins
0.0.14
	- bugfix: d3.dispatch moved inside of the lib
0.0.15
	- bugfix: avoid duplication of tracks (tracks are now removed on "start")
0.0.16
	- Better labeling of pin features
	- layout reworked. Allow custom layouts (and transformation)
0.0.17
	- Added updater to pin feature
0.0.18
	- fixed axis and location features on reload
0.0.19
	- bugfix, do not set loc.to to limits.right if the region is too small
0.0.20
	- Improvements in the 'reorder' method (not altering the passed array of new tracks)
0.0.21
	- Fix in data.retriever.async to use promises
0.0.22
	- updated tnt.utils
0.0.23
	- foreground_color in pins feature expects a functor (at some point all the features will behave like this)
0.0.24
	- removed console message
0.0.25
	- updated version of tnt.api
0.0.26
	- updated dependencies
0.0.27
	- fixed line definition in area feature
0.0.28
	- data updater is now pass the track as 'this' (instead of the updater itself)
0.0.29
	- added spinner to the async data retriever
0.0.30
	- bugfix: spinner not always attached
0.0.31
	- renamed built css file (now tnt.board.css)
	- api: "move_right" / "move_left" renamed "scroll"
	- api: "reorder" removed, "tracks" now reorders tracks
	- api: Track ids are not settable (and "find_track" method added to board)
	- api: Simplification of the "right" method: can't be async anymore
	- api: Simplified data object / interface